<resources>
    <string name="app_name">Login0</string>
    <string name="tip_login_first">请先登录</string>
    <string name="login">登录</string>
    <string name="input_mobile_number">输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_now">立即用手机号注册</string>
    <string name="mobile_number">手机号</string>
    <string name="password">密码</string>
    <string name="blank" />
    <string name="login_error_username_or_psw_empty">错误: 手机号和密码不能为空</string>
    <string name="login_error_nickname_or_psw_empty">错误: 手机号、昵称和密码不能为空</string>
    <string name="tip_username_empty">用户名不能为空</string>
    <string name="tip_nickname_empty">昵称不能为空</string>
    <string name="tip_password_empty">密码不能为空</string>
    <string name="tip_reset_password">如需重置密码请贿赂管理员。</string>
    <string name="register">注册</string>
    <string name="input_nickname">输入昵称</string>
    <string name="nickname">昵称</string>
    <string name="password_MD5_error">您可能是山寨手机的受害者！</string>
    <string name="username_already_exists">手机号已被使用</string>
    <string name="login_success">登录成功！</string>
    <string name="login_failed_username_or_password_error">用户名或密码错误</string>
    <string name="register_success">注册成功！</string>
    <string name="account_manage">账户管理</string>
    <string name="change_password">修改密码</string>
    <string name="logout">登出</string>
    <string name="hello">您好,</string>
    <string name="delete_account">彻底删除帐号</string>
    <string name="logout_success">您已成功登出！</string>
    <string name="delete_account_warning">此操作将会把你的帐号资料从数据库彻底删除，除非您重新注册，您将无法使用该帐号进行登录，是否继续？</string>
    <string name="delete_account_success">帐号删除成功！</string>
    <string name="exit_app">退出程序</string>
    <string name="change_password_tip_old">输入您的旧密码</string>
    <string name="change_password_tip_new">输入您的新密码</string>
    <string name="change_password_tip_new_again">再次输入以确认您的新密码</string>
    <string name="old_password">旧密码：</string>
    <string name="new_password">新密码：</string>
    <string name="new_password_again">确认新密码：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="error_password_again_diff">错误：两次输入的新密码不一致</string>
    <string name="error_old_password">错误：旧密码错误</string>
    <string name="password_change_success">密码修改成功！</string>
    <string name="change_password_error_input_empty">错误：旧密码、新密码和确认新密码均不能为空</string>
    <string name="error_old_new_password_same">错误：您输入的旧密码和新密码相同，出现该提示并不意味着你输入的旧密码是正确的</string>
    <string name="remember_me">记住我</string>
    <string name="change_nickname">修改昵称</string>
    <string name="new_nickname">新昵称：</string>
    <string name="input_new_nickname">输入新昵称</string>
    <string name="new_nickname_empty">错误：必须填写新昵称</string>
    <string name="change_nickname_success">昵称修改成功！</string>
</resources>
