<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tip_on_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:text="@string/old_password" />

    <EditText
        android:id="@+id/old_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/change_password_tip_old"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tip_on_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:text="@string/new_password" />

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/change_password_tip_new"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tip_on_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:text="@string/new_password_again" />

    <EditText
        android:id="@+id/new_password_again_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/change_password_tip_new_again"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true" />


</LinearLayout>