<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_with_back_inAccount"
        layout="@layout/toolbar_with_back" />

    <TextView
        android:id="@+id/account_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_with_back_inAccount"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/hello"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/account_info_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_with_back_inAccount"
        android:layout_toEndOf="@+id/account_hello"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/blank"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_hello"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/change_password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_change_password"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/logout"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_logout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/delete_account"
        android:textSize="20sp" />

</RelativeLayout>