<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.v7.cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_with_back_inLogin"
        layout="@layout/toolbar_with_back" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_with_back_inLogin"
        android:layout_margin="15dp"
        android.support.v7.cardview:cardBackgroundColor="#FFFFFF"
        android.support.v7.cardview:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tip_on_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="15dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/input_mobile_number"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tip_on_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="15dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:text="@string/login"
                    android:textColor="@color/colorButtonText"
                    android:textSize="16sp"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:id="@+id/button_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorButtonText"
                    android:textSize="16sp"
                    android:layout_toLeftOf="@id/button_login" />

                <CheckBox
                    android:id="@+id/checkbox_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:layout_toLeftOf="@id/button_forget_password"
                    android:checked="true" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_check_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardview_login_password"
        android:layout_margin="15dp"
        android.support.v7.cardview:cardBackgroundColor="#FFFFFF"
        android.support.v7.cardview:cardCornerRadius="2dp">

        <TextView
            android:id="@+id/textview_check_to_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/register_now"
            android:textColor="@color/colorButtonText"
            android:textSize="16sp"
            android:textAlignment="center" />

    </android.support.v7.widget.CardView>

</RelativeLayout>