<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.v7.cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_register_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tip_on_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="15dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/input_mobile_number"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tip_on_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="15dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/nickname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/nickname"
                android:maxLength="30"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tip_on_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="15dp"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:text="@string/register"
                    android:textColor="@color/colorButtonText"
                    android:textSize="16sp"
                    android:gravity="center" />

            </RelativeLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_above="@id/cardview_register_main"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:gravity="center" />


</RelativeLayout>